[package]
name = "qrtimestamp"
description = "Simple helper to test pipelines where the qrcode content is the unix timestamp of the machine in ms"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"
repository = "https://github.com/patrickelectric/qrtimestamp"

[lib]
name = "gstqrtimestamp"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.8.1"

[dependencies]
glib = "0.19.2"
gst = { package = "gstreamer", version = "0.22", features = ["v1_22"] }
gst-base = { package = "gstreamer-base", version = "0.22", features = ["v1_22"] }
gst-video = { package = "gstreamer-video", version = "0.22", features = ["v1_22"] }

qrc = "0.0.5"
once_cell = "1.19.0"
sinais = "0.1.0"
tokio = { version = "1", features = ["full"] } 
