[package]
name = "qrtimestamp"
description = "Simple helper to test pipelines where the qrcode content is the unix timestamp of the machine in ms"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build.rs"
repository = "https://github.com/patrickelectric/qrtimestamp"

[lib]
name = "gstqrtimestamp"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.8.2"

[dependencies]
glib = "0.19"
gst = { package = "gstreamer", version = "0.22", features = ["v1_16"] }
gst-base = { package = "gstreamer-base", version = "0.22", features = ["v1_16"] }
gst-video = { package = "gstreamer-video", version = "0.22", features = ["v1_16"] }

image = "0.24"
once_cell = "1.19.0"
qrc = "0.0.5" # Encode
rqrr = "0.6" # Decode, TODO: Use it to replace qrc

[profile.release]
lto = true
opt-level = 3
debug = true
panic = 'unwind'
strip = true

[profile.dev]
opt-level = 1
